build: add Docker deployment infrastructure for Alcyone fork
Changes:
- Add .env.example and remove dev-support/atlas-docker/.env (moved to root)
- Add docker-compose.yml with ZooKeeper, Solr, Kafka, and Atlas Server services
- Add setup.sh build orchestration script (download/build/all)
- Update atlas-build.sh: fork Git URL, increase Maven heap to 4GB, enable parallel build (-T 1C)
- Update atlas.sh: parameterize admin credentials via environment variables
- Replace README.md with Alcyone fork documentation
- Add .env, CLAUDE.md, .serena/ to .gitignore

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>